2012-05-29  6.7.7-4 Glenn Randers-Pehrson <glennrp@image...>
  * Ignore APNG chunks even when libpng is built with the "APNG patch".

2012-05-29  6.7.7-3 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.7-3, SVN revision 8089.

2012-05-28  6.7.7-3 Cristy  <quetzlzacatenango@image...>
  * Fix bug with stroke-dasharray (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21090).
  * In rare cases, caption would not word-wrap properly (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21106).
  * Don't set alpha pixels in SetImageVirtualPixelMethod() unless
    image area is well defined (i.e. != 0) (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?t=21110).

2012-05-27  6.7.7-3 Anthony Thyssen <A.Thyssen@griffith...>
  * Trialing the addition of new interpolation methods
      Average16         average of 16 pixels around sampling point
      Average9          9 pixels around nearest pixel
      Average4          Average of 4 pixels around sampling point
      Background        Background color (for resampling error checking)
      Blend             Blend of closest 1, 2 or 4 pixel neighbors
    NOTE: 'Average' is now equivelent to 'Average4',
    previous to this version it was equivelent to 'Average16'.
    The 'Background' method is for showing 'resample errors' be it
    accidental, or on purpose.  See IM Examples, Cylindrical Filters.

2012-05-26  6.7.7-2 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.7-2, SVN revision 8066.

2012-05-26  6.7.7-2 Cristy  <quetzlzacatenango@image...>
  * MagickDelay() is in microseconds, not milliseconds.

2012-05-25  6.7.7-1 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.7-1, SVN revision 8059.

2012-05-20  6.7.7-1 Cristy  <quetzlzacatenango@image...>
  * In rare cases, caption would not word-wrap properly (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21044).